<resources>
    <string name="app_name">MatchFinder</string>


    //LogIn Strings
    <string name="LogInBtn">Log In</string>
    <string name="logInEmail">User Name</string>
    <string name="logInPassword">Password</string>
    <string name="LogInCreateAcc">Sign Up</string>
    <string name="LogInForgotPW">I forgot my password</string>

    //Welcome Strings
    <string name="welcomeMatches">These are your current matches</string>
    <string name="welcomeShowOffers">Show all currently offered Matches</string>
    <string name="welcomeCreateOffer">Offer new match</string>
    <string name="welcomeName">Welcome,</string>
    <string name="welcomeToProfile">Go to my Profile</string>

    //Offered Matches Strings
    <string name="offeredMatches">Matches that are currently being offered</string>


    //Detail View Strings
    <string name="detailViewUsers">These users are participating</string>
    <string name="detailViewGetMeIn">I want to participate!</string>
    <string name="title_activity_create_offer">CreateOffer</string>
    <string name="MatchDone">Match done</string>


    //Create New Offer Strings
    <string name="createOfferTaskName">Create new offer</string>
    <string name="createOfferNoofPeop">Number of people</string>
    <string name="createNewOfferBtn">Create</string>
    <string name="createNewOfferDate">Date</string>
    <string name="CreateNewOfferTime">Time</string>
    <string name="CreateNewOfferLocation">Location</string>



    //Profile Strings
    <string name="profileTopThree">Skills</string>
    <string name="addSkill_btn">Add Skill</string>
    <string name="editSkill_btn">Edit Skill</string>



    //SignUp Strings
    <string name="signUpTitle">Sign Up</string>
    <string name="signUpGender">M/F</string>
    <string name="signUpFirstName">First Name</string>
    <string name="signUpLastName">Last Name</string>
    <string name="signUpNickName">Nick Name</string>
    <string name="signUpBday">Birthdate (yyyy-mm-dd)</string>
    <string name="signUpMajor">Major</string>
    <string name="signUpPhone">Phone</string>
    <string name="signUpRepeat">Repeat Password</string>
    <string name="signUpSecQuest1">What is your older grandmother\'s name?</string>

    //Forgot Password Strings
    <string name="forgotPwTitle">Restore your password</string>
    <string name="forgotPwSubmit">Change Password</string>


    //Match History Strings
    <string name="welcomeHistory">Match History</string>
    <string name="historyTitle">Your Match History</string>


    //Skill Config Strings
    <string name="SubmitSkills">Submit</string>

</resources>
